<?xml version="1.0"?>
<package format="2">
  <name>gmsl_logger</name>
  <version>1.0.0</version>
  <description>
    Wrapper for Nvidia Driveworks to log video
  </description>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libglew-dev</depend><!--TODO: Figure out what actually needs this library-->
  <maintainer email="NA@gmail.com">wei</maintainer>
  <license>BSD</license>

</package>
